[package]
name = "aqablerweb"
version = "0.1.0"
authors = ["Zander Brown <ZanderBrown@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aqabler = { git = "https://github.com/ZanderBrown/aqabler" }
js-sys = "0.3.10"

[profile.release]
lto = true
