[package]
name = "aqablerweb"
version = "0.1.0"
authors = ["Zander Brown <ZanderBrown@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.10"

[dependencies.aqabler]
path = "/home/zbrown/Projects/Langs/aqabler"
features = []

[profile.release]
lto = true
